[gd_scene load_steps=6 format=2]

[ext_resource path="res://PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Zurück.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Zurück1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Hauptmenu.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Hauptmenu1.png" type="Texture" id=5]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 235.0
margin_top = 127.0
margin_right = 405.0
margin_bottom = 232.0

[node name="Resume" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 47.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="MainMenu" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 170.0
margin_bottom = 105.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
